# pydas

./: .gitignore  .pylintrc  LICENSE  README.md  alembic.ini  appsettings.json  credentials.json  dev-requirements.txt  extra-requirements.txt  logs.conf  pydas.ini  pydas.yaml  setup.cfg  setup.py  test_pydas.yaml
.github/workflows/: pydas.yaml
docs/: conf.py  index.rst
docs/metadata/: index.rst  json.rst  migrations.rst
docs/metadata/contexts/: base.rst  database.rst  index.rst  memory.rst
docs/metadata/models/: archive.rst  company.rst  company_feature.rst  configuration.rst  event_handler.rst  feature.rst  feature_toggle.rst  handler.rst  index.rst  option.rst  statistics.rst
docs/pydas/: archive.rst  feature_mapper.rst  handlers.rst  index.rst  transformers.rst
docs/pydas/api/: index.rst  routes.rst  signals.rst
docs/pydas/clients/: iex.rst  index.rst  ipfs.rst
docs/pydas/formatters/: factory.rst  file.rst  index.rst
docs/sdas/: archive.rst  feature_mapper.rst  handlers.rst  index.rst
docs/sdas/api/: index.rst  signals.rst
docs/sdas/clients/: iex.rst  index.rst  ipfs.rst
docs/sdas/formatters/: factory.rst  file.rst  index.rst
src/metadata/contexts/: __init__.py  base.py  database.py  memory.py
src/metadata/files/: __init__.py  load.py  schema.json
src/metadata/migrations/: env.py
src/metadata/models/: __init__.py  archive.py  base.py  company.py  company_feature.py  configuration.py  event_handler.py  feature.py  feature_toggle.py  handler.py  option.py  statistics.py
src/pydas/: __init__.py  config.py  constants.py  containers.py  install.py  scopes.py  signals.py  transformers.py
src/pydas/archive/: __init__.py  ipfs.py
src/pydas/clients/: __init__.py  aws.py  base.py  iex.py
src/pydas/feature_mapper/: feature.py  feature_map.py
src/pydas/formatters/: __init__.py  base.py  compression.py  file.py  json.py
src/pydas/handlers/: __init__.py  email.py  errors.py
src/pydas/routes/: __init__.py  acquire.py  archives.py  company.py  configuration.py  entity.py  feature.py  handler.py  option.py  statistics.py  utils.py
src/pydas/signals/: __init__.py
src/pydas/static/: swagger-config.yaml
src/pydas/transformers/: iex_handlers.py  iex_news_handlers.py  utils.py
src/pydas_auth/: __init__.py  scopes.py
src/pydas_auth/clients/: __init__.py  base.py  google.py
src/pydas_config/: __init__.py  builder.py  config.py  install.py  section.py
src/pydas_config/parsers/: __init__.py  argument.py  base.py  ini.py  yaml.py
src/pydas_config/schema/: __init__.py  exceptions.py  field.py  fieldgroup.py
src/pydas_metadata/: __init__.py  constants.py  container.py  json.py
src/pydas_metadata/contexts/: __init__.py  base.py  database.py  memory.py
src/pydas_metadata/migrations/: env.py  script.py.mako
src/pydas_metadata/models/: __init__.py  archive.py  base.py  (+12 more)
src/sdas/: __init__.py  constants.py  install.py  sdas.py
tests/metadata/: test_archive_model.py  test_configuration_model.py  test_event_handler_model.py  test_feature_model.py  test_json.py  test_option_model.py  test_orm_context.py
tests/pydas/: test_app.py
(+59 files in other folders)
