[metadata]
name              = sDAS
version           = attr: sdas.__version__
description       = stock Data Acquisition Service for generating financial research datasets
long_description  = file: README.md
license           = MIT
author            = Bradley Van Fleet
author_email      = 10599461@uvu.edu
maintainer        = UVU CET
maintainer_email  = jtang@uvu.edu
url               = https://github.com/UVU-PFP-Research/Personal-Financial-Planner
keywords          = 
  finance
  data acquisition
  dataset generator

[options]
include_package_data  = True
install_requires      =
  alembic==1.4.3
  blinker==1.4
  boto3==1.16.46
  firebase-admin==4.4.0
  Flask==1.1.2
  Flask-Cors==3.0.8
  flask-swagger-ui==3.25.0
  ipfshttpclient==0.7.0a1
  mysqlclient==2.0.1
  nltk==3.5
  requests==2.23.0
  SQLAlchemy==1.3.18
packages              = find:
package_dir           = = src
python_requires       = >= 3.7

[options.entry_points]
console_scripts = 
  sdas-config = sdas.install:main

[options.package_data]
sdas = api/static/*.yaml
metadata = files/schema.json

[options.packages.find]
where = src
