[metadata]
name              = pyDAS
version           = attr: pydas.__version__
description       = Python Data Acquisition Service for generating research datasets
long_description  = file: README.md
license           = MIT
author            = Bradley Van Fleet
author_email      = vanfleet.brad0614@gmail.com
url               = https://github.com/UVU-PFP-Research/Personal-Financial-Planner
keywords          =
  data acquisition
  dataset generator

[options]
include_package_data  = True
install_requires      =
  alembic==1.4.3
  blinker==1.4
  boto3==1.16.46
  dependency-injector==4.27.0
  firebase-admin==4.5.1
  Flask==1.1.2
  Flask-Cors==3.0.8
  flask-swagger-ui==3.25.0
  google-cloud-firestore==2.0.2
  ipfshttpclient==0.7.0a1
  mysqlclient==2.0.1
  nltk==3.5
  requests==2.24.0
  SQLAlchemy==1.3.18
packages              = find:
package_dir           = = src
python_requires       = >= 3.7

[options.entry_points]
console_scripts =
  pydas-config = pydas.install:main

[options.package_data]
pydas = api/static/*.yaml
metadata = files/schema.json

[options.packages.find]
where = src
