[metadata]
name              = pyDAS
version           = attr: pydas.__version__
description       = Python Data Acquisition Service for generating research datasets
long_description  = file: README.md
license           = MIT
author            = Bradley Van Fleet
author_email      = vanfleet.brad0614@gmail.com
url               = https://github.com/UVU-PFP-Research/Personal-Financial-Planner
keywords          =
  data acquisition
  dataset generator

[options]
include_package_data  = True
packages              = find:
package_dir           = = src
python_requires       = >= 3.7

[options.entry_points]
console_scripts =
  pydas-config = pydas.install:main

[options.package_data]
pydas = api/static/*.yaml
metadata = files/schema.json

[options.packages.find]
where = src
